// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCardV2 Snapshots matches snapshot - basic card 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-88771x"
      data-backpack-ds-component="Flex"
    >
      Card Title
    </div>
    <div
      class="css-rh38e6"
      data-backpack-ds-component="Flex"
    >
      Card content goes here
    </div>
    <div
      class="css-88771x"
      data-backpack-ds-component="Flex"
    >
      Card footer
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - complex layout with all sections 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-88771x"
      data-backpack-ds-component="Flex"
    >
      Product
    </div>
    <div
      class="css-wdatzd"
      data-backpack-ds-component="Flex"
    >
      <div
        class="css-1b1j0dq"
        data-backpack-ds-component="Box"
      >
        <img
          alt="Product"
          src="product.jpg"
        />
      </div>
      <div
        class="bpk-card-v2__divider"
      />
      <div
        class="css-1osy8ym"
        data-backpack-ds-component="Box"
      >
        <h3>
          Description
        </h3>
        <p>
          Product details
        </p>
      </div>
    </div>
    <div
      class="css-88771x"
      data-backpack-ds-component="Flex"
    >
      <button
        type="button"
      >
        Add to cart
      </button>
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - elevated surface color 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-bg-color="surfaceElevated"
  >
    <div
      class="css-rh38e6"
      data-backpack-ds-component="Flex"
    >
      Elevated background surface
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - minimal card (body only) 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-rh38e6"
      data-backpack-ds-component="Flex"
    >
      Minimal card with just body
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - outlined variant 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--outlined"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-88771x"
      data-backpack-ds-component="Flex"
    >
      Outlined Card
    </div>
    <div
      class="css-rh38e6"
      data-backpack-ds-component="Flex"
    >
      Content with border instead of shadow
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - split layout 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-wdatzd"
      data-backpack-ds-component="Flex"
    >
      <div
        class="css-1tc7bba"
        data-backpack-ds-component="Box"
      >
        Main content area (70%)
      </div>
      <div
        class="bpk-card-v2__divider"
      />
      <div
        class="css-cgkxe4"
        data-backpack-ds-component="Box"
      >
        Sidebar area (30%)
      </div>
    </div>
  </div>
</div>
`;
